--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "email-validator>=2.0.0",
     "passlib[bcrypt]>=1.7.4",
     "itsdangerous>=2.2.0",
+    "aiosmtplib>=3.0.0",
 ]
 
 [project.optional-dependencies]
