--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "itsdangerous>=2.2.0",
     "aiosmtplib>=3.0.0",
+    "apscheduler>=3.10.0",
 ]
 
 [project.optional-dependencies]
