--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 SECRET_KEY=your-secret-key-here-generate-with-openssl-rand-hex-32
 
 # Database (optional - defaults shown)
-DATABASE_URL=sqlite+aiosqlite:///./data/kindledrop.db
+DATABASE_URL=sqlite+aiosqlite:////data/kindledrop.db
 
 # Storage (optional - defaults shown)
 EPUB_DIR=/data/epubs
