--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,11 @@ dependencies = [
     "pydantic-settings>=2.6.0",
     "email-validator>=2.0.0",
     "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.0.0,<4.1.0",
     "itsdangerous>=2.2.0",
     "aiosmtplib>=3.0.0",
     "apscheduler>=3.10.0",
+    "pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
